--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    opacity: 0.4;
 }
 
 body
@@ -31,6 +32,7 @@ body
 }
 .slide.active
 {
+    opacity: 1;
     flex: 5;
 }
 
